--- a/.github/workflows/action-release.yml
+++ b/.github/workflows/action-release.yml
@@ -27,7 +27,7 @@ jobs:
           $compress = @{
             Path = "*.dll", "README.md", "LICENSE"
             DestinationPath = "SubTitans.zip"
-            Force = true
+            Force = $True
           }
           Compress-Archive @compress
 
