GOG Support + Refactor

--- a/d3drm/d3drm.vcxproj.filters
+++ b/d3drm/d3drm.vcxproj.filters
@@ -2,8 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="d3drm.cpp" />
+    <ClCompile Include="injector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="types.h" />
+    <ClInclude Include="injector.h" />
   </ItemGroup>
 </Project>
