--- a/subtitans/subtitans.vcxproj.filters
+++ b/subtitans/subtitans.vcxproj.filters
@@ -29,6 +29,12 @@
     <ClCompile Include="gogpatcher.cpp">
       <Filter>patcher</Filter>
     </ClCompile>
+    <ClCompile Include="movieheapcorruptionpatch.cpp">
+      <Filter>patches</Filter>
+    </ClCompile>
+    <ClCompile Include="scrollpatch.cpp">
+      <Filter>patches</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="patcher.h">
@@ -61,6 +67,12 @@
     <ClInclude Include="subtitans.h" />
     <ClInclude Include="steampatchedpatcher.h">
       <Filter>patcher</Filter>
+    </ClInclude>
+    <ClInclude Include="movieheapcorruptionpatch.h">
+      <Filter>patches</Filter>
+    </ClInclude>
+    <ClInclude Include="scrollpatch.h">
+      <Filter>patches</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
