--- a/subtitans/subtitans.vcxproj
+++ b/subtitans/subtitans.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="disabledrawstackingpatch.cpp" />
     <ClCompile Include="gogpatcher.cpp" />
     <ClCompile Include="highdpipatch.cpp" />
+    <ClCompile Include="missionskippatch.cpp" />
     <ClCompile Include="movieheapcorruptionpatch.cpp" />
     <ClCompile Include="nativeresolutionpatch.cpp" />
     <ClCompile Include="patcher.cpp" />
@@ -94,6 +95,7 @@
     <ClInclude Include="disabledrawstackingpatch.h" />
     <ClInclude Include="gogpatcher.h" />
     <ClInclude Include="highdpipatch.h" />
+    <ClInclude Include="missionskippatch.h" />
     <ClInclude Include="movieheapcorruptionpatch.h" />
     <ClInclude Include="nativeresolutionpatch.h" />
     <ClInclude Include="patch.h" />
