--- a/subtitans/subtitans.vcxproj.filters
+++ b/subtitans/subtitans.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="scrollpatch.cpp">
       <Filter>patches</Filter>
     </ClCompile>
+    <ClCompile Include="missionskippatch.cpp">
+      <Filter>patches</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="patcher.h">
@@ -72,6 +75,9 @@
       <Filter>patches</Filter>
     </ClInclude>
     <ClInclude Include="scrollpatch.h">
+      <Filter>patches</Filter>
+    </ClInclude>
+    <ClInclude Include="missionskippatch.h">
       <Filter>patches</Filter>
     </ClInclude>
   </ItemGroup>
