--- a/subtitans/subtitans.vcxproj
+++ b/subtitans/subtitans.vcxproj
@@ -44,9 +44,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>glew\include\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>glew\include\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -54,7 +56,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -62,49 +64,95 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>false</GenerateDebugInformation>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ddrawreplacementpatch.cpp" />
     <ClCompile Include="disabledrawstackingpatch.cpp" />
+    <ClCompile Include="glew\src\glew.c" />
     <ClCompile Include="gogpatcher.cpp" />
     <ClCompile Include="highdpipatch.cpp" />
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="input.cpp" />
+    <ClCompile Include="keyboarddevice.cpp" />
+    <ClCompile Include="mousedevice.cpp" />
     <ClCompile Include="missionskippatch.cpp" />
     <ClCompile Include="movieheapcorruptionpatch.cpp" />
     <ClCompile Include="nativeresolutionpatch.cpp" />
+    <ClCompile Include="openglrenderer.cpp" />
     <ClCompile Include="patcher.cpp" />
     <ClCompile Include="scrollpatch.cpp" />
     <ClCompile Include="sleepwellpatch.cpp" />
+    <ClCompile Include="softwarerenderer.cpp" />
     <ClCompile Include="steampatchedpatcher.cpp" />
     <ClCompile Include="steampatcher.cpp" />
     <ClCompile Include="subtitans.cpp" />
+    <ClCompile Include="clipper.cpp" />
+    <ClCompile Include="device.cpp" />
+    <ClCompile Include="palette.cpp" />
+    <ClCompile Include="surface.cpp" />
     <ClCompile Include="windowedmodepatch.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ddrawreplacementpatch.h" />
+    <ClInclude Include="glew\include\GL\glew.h" />
+    <ClInclude Include="glew\include\GL\wglew.h" />
+    <ClInclude Include="idinputdevice7.h" />
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="imgui\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="input.h" />
     <ClInclude Include="disabledrawstackingpatch.h" />
     <ClInclude Include="gogpatcher.h" />
     <ClInclude Include="highdpipatch.h" />
+    <ClInclude Include="idinput7.h" />
+    <ClInclude Include="keyboarddevice.h" />
+    <ClInclude Include="mousedevice.h" />
+    <ClInclude Include="irenderer.h" />
     <ClInclude Include="missionskippatch.h" />
     <ClInclude Include="movieheapcorruptionpatch.h" />
+    <ClInclude Include="iddraw4.h" />
+    <ClInclude Include="iddrawsurface4.h" />
+    <ClInclude Include="iddrawclipper.h" />
+    <ClInclude Include="iddrawpalette.h" />
     <ClInclude Include="nativeresolutionpatch.h" />
+    <ClInclude Include="openglrenderer.h" />
     <ClInclude Include="patch.h" />
     <ClInclude Include="patcher.h" />
     <ClInclude Include="scrollpatch.h" />
     <ClInclude Include="sleepwellpatch.h" />
+    <ClInclude Include="softwarerenderer.h" />
     <ClInclude Include="steampatchedpatcher.h" />
     <ClInclude Include="steampatcher.h" />
     <ClInclude Include="subtitans.h" />
+    <ClInclude Include="clipper.h" />
+    <ClInclude Include="device.h" />
+    <ClInclude Include="palette.h" />
+    <ClInclude Include="surface.h" />
     <ClInclude Include="windowedmodepatch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
