--- a/game/subtitans.ini
+++ b/game/subtitans.ini
@@ -1,38 +1,29 @@
 [SETTING]
-; Manual overriding of the screen resolution is useful when you have the need to stretch the game instead of scaling (performance reasons)
-; Override the detected screen width (0: Ignore)
+; Override the detected screen width (0: Ignore).
 Width=0
-; Override the detected screen height (0: Ignore)
+; Override the detected screen height (0: Ignore).
 Height=0
 
 [FEATURE]
-; Allows the game to scale the GUI further than 1280x1024
+; Provides widescreen support with propper scaling of the GUI.
+; This patch overrides the in-game resolution of 1280x1024.
 NativeResolution=true
-; Provides an alternative to the default DirectDraw (obsolete) renderer (0: Automatic, 1: DirectDraw, 2: OpenGL, 3: Software)
-; When using the GOG release of Submarine Titans or when using a custom DirectDraw replacement/wrapper it is required to set this value on 1
+; Provides an alternative for the obsolete DirectDraw renderer (0: Automatic, 1: DirectDraw, 2: OpenGL, 3: Software).
+; Set the value to 1 when using a custom DirectDraw wrapper.
 Renderer=0
-; Add the cheat 'orbiton' for mission skipping, see the readme for more information
-MissionSkipCheat=1
-; Provides an alternative to the default DInput (obsolete) input handling (Doesn't work in combination with DirectDraw)
+; Add the 'orbiton' cheat for mission skipping, see the readme for more information.
+MissionSkipCheat=true
+; Provides an alternative for the obsolete DirectInput input handling.
 ; Set this variable to false if you're experiencing problems with mouse or keyboard input.
+; This modification doesn't work in combination with the DirectDraw renderer.
 CustomInput=true
 ; Shader that tries to mimic CRT behavior. The OpenGL renderer is required for this effect.
 RetroShader=false
 
 [FIX]
-; Fixes a crash caused by the movie player
+; Fixes a crash caused by the video player.
 MovieHeap=true
-; Replaces the default FPS limiter with a more stable implementation
+; Replaces the default FPS limiter with a better implementation.
 ImprovedFPSLimiter=true
-; Improves the smoothness of scrolling in-game
+; Improves the smoothness of scrolling in-game.
 SmoothScroll=true
-
-; Legacy patches only relevant for DirectDraw
-; Consider turning these settings off when using a DirectDraw wrapper
-[DIRECTDRAW]
-; Rendering fix for displays with scaling enabled
-DpiScaling=true
-; Fix for alt+tab crash
-AltTab=true
-; Improves the framerate
-DisableDrawStacking=true
