--- a/subtitans/subtitans.vcxproj
+++ b/subtitans/subtitans.vcxproj
@@ -82,10 +82,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ddrawreplacementpatch.cpp" />
-    <ClCompile Include="disabledrawstackingpatch.cpp" />
+    <ClCompile Include="demopatcher.cpp" />
     <ClCompile Include="glew\src\glew.c" />
     <ClCompile Include="gogpatcher.cpp" />
-    <ClCompile Include="highdpipatch.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
@@ -110,10 +109,10 @@
     <ClCompile Include="device.cpp" />
     <ClCompile Include="palette.cpp" />
     <ClCompile Include="surface.cpp" />
-    <ClCompile Include="windowedmodepatch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ddrawreplacementpatch.h" />
+    <ClInclude Include="demopatcher.h" />
     <ClInclude Include="glew\include\GL\glew.h" />
     <ClInclude Include="glew\include\GL\wglew.h" />
     <ClInclude Include="idinputdevice7.h" />
@@ -126,9 +125,7 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="input.h" />
-    <ClInclude Include="disabledrawstackingpatch.h" />
     <ClInclude Include="gogpatcher.h" />
-    <ClInclude Include="highdpipatch.h" />
     <ClInclude Include="idinput7.h" />
     <ClInclude Include="keyboarddevice.h" />
     <ClInclude Include="mousedevice.h" />
@@ -153,7 +150,6 @@
     <ClInclude Include="device.h" />
     <ClInclude Include="palette.h" />
     <ClInclude Include="surface.h" />
-    <ClInclude Include="windowedmodepatch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
