--- a/subtitans/subtitans.vcxproj.filters
+++ b/subtitans/subtitans.vcxproj.filters
@@ -8,19 +8,10 @@
     <ClCompile Include="steampatcher.cpp">
       <Filter>patcher</Filter>
     </ClCompile>
-    <ClCompile Include="windowedmodepatch.cpp">
-      <Filter>patches</Filter>
-    </ClCompile>
     <ClCompile Include="sleepwellpatch.cpp">
       <Filter>patches</Filter>
     </ClCompile>
-    <ClCompile Include="disabledrawstackingpatch.cpp">
-      <Filter>patches</Filter>
-    </ClCompile>
     <ClCompile Include="nativeresolutionpatch.cpp">
-      <Filter>patches</Filter>
-    </ClCompile>
-    <ClCompile Include="highdpipatch.cpp">
       <Filter>patches</Filter>
     </ClCompile>
     <ClCompile Include="steampatchedpatcher.cpp">
@@ -89,6 +80,9 @@
     <ClCompile Include="imgui\imgui_widgets.cpp">
       <Filter>external\imgui</Filter>
     </ClCompile>
+    <ClCompile Include="demopatcher.cpp">
+      <Filter>patcher</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="patcher.h">
@@ -97,16 +91,10 @@
     <ClInclude Include="steampatcher.h">
       <Filter>patcher</Filter>
     </ClInclude>
-    <ClInclude Include="windowedmodepatch.h">
-      <Filter>patches</Filter>
-    </ClInclude>
     <ClInclude Include="sleepwellpatch.h">
       <Filter>patches</Filter>
     </ClInclude>
     <ClInclude Include="patch.h">
-      <Filter>patches</Filter>
-    </ClInclude>
-    <ClInclude Include="disabledrawstackingpatch.h">
       <Filter>patches</Filter>
     </ClInclude>
     <ClInclude Include="nativeresolutionpatch.h">
@@ -114,9 +102,6 @@
     </ClInclude>
     <ClInclude Include="gogpatcher.h">
       <Filter>patcher</Filter>
-    </ClInclude>
-    <ClInclude Include="highdpipatch.h">
-      <Filter>patches</Filter>
     </ClInclude>
     <ClInclude Include="subtitans.h" />
     <ClInclude Include="steampatchedpatcher.h">
@@ -211,6 +196,9 @@
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
       <Filter>external\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="demopatcher.h">
+      <Filter>patcher</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
